feat(demo): add environment panel and adaptive example

--- a/pupt-react/demo/index.html
+++ b/pupt-react/demo/index.html
@@ -3,14 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>pupt-react Demo</title>
+    <title>JSX Prompt Demo</title>
     <!-- Import map for dynamic ES module evaluation in pupt-lib -->
-    <!-- Using local pupt-lib to test unpublished features like name-hoisting -->
     <script type="importmap">
       {
         "imports": {
-          "pupt-lib": "/pupt-react/@fs/home/apowers/Projects/pupt-lib/dist/index.js",
-          "pupt-lib/jsx-runtime": "/pupt-react/@fs/home/apowers/Projects/pupt-lib/dist/jsx-runtime/index.js",
+          "pupt-lib": "https://unpkg.com/pupt-lib@1.2.6/dist/index.js",
+          "pupt-lib/jsx-runtime": "https://unpkg.com/pupt-lib@1.2.6/dist/jsx-runtime/index.js",
           "zod": "https://unpkg.com/zod@3.24.2/lib/index.mjs",
           "minisearch": "https://unpkg.com/minisearch@7.1.1/dist/es/index.js"
         }
@@ -48,7 +47,7 @@
       </style>
       <div class="initial-loader">
         <div class="spinner"></div>
-        <p>Loading pupt-react Demo...</p>
+        <p>Loading JSX Prompt Demo...</p>
       </div>
     </div>
     <script type="module" src="/src/main.tsx"></script>
