feat: migrate to Zod v4 API, refactor JSX whitespace plugin, add prompt title support

--- a/pupt-react/demo/index.html
+++ b/pupt-react/demo/index.html
@@ -13,7 +13,7 @@
         "imports": {
           "@pupt/lib": "https://unpkg.com/@pupt/lib@__PUPT_LIB_VERSION__/dist/index.js",
           "@pupt/lib/jsx-runtime": "https://unpkg.com/@pupt/lib@__PUPT_LIB_VERSION__/dist/jsx-runtime/index.js",
-          "zod": "https://unpkg.com/zod@__ZOD_VERSION__/index.js"
+          "zod": "https://esm.sh/zod@__ZOD_VERSION__"
         }
       }
     </script>
